--- a/index.html
+++ b/index.html
@@ -2,19 +2,29 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>User Login Panel</title>
+<title>AR Wallet Panel</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
 <style>
-*{box-sizing:border-box;-webkit-tap-highlight-color:transparent}
-body{
+*{
+  box-sizing:border-box;
+  -webkit-tap-highlight-color:transparent;
   margin:0;
-  min-height:100vh;
+  padding:0;
+}
+
+body{
+  height:100vh;
+  height:100dvh;
   font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
   background:
-    radial-gradient(1200px 600px at top right,#1e293b33,transparent),
-    radial-gradient(800px 400px at bottom left,#0ea5e933,transparent),
+    radial-gradient(circle at top right,#38bdf820,transparent 50%),
+    radial-gradient(circle at bottom left,#ef444420,transparent 50%),
     linear-gradient(135deg,#020617,#020617);
   display:flex;
   align-items:center;
@@ -25,535 +35,187 @@ body{
 /* Desktop block */
 #desktopBlock{
   display:none;
+  max-width:380px;
+  padding:28px;
   text-align:center;
-  padding:30px;
-  max-width:420px;
-}
-#desktopBlock h2{
-  color:#fb7185;
-  margin-bottom:8px;
-}
-#desktopBlock p{
-  color:#94a3b8;
-  font-size:14px;
+  background:rgba(15,23,42,.8);
+  border-radius:24px;
+  border:1px solid rgba(148,163,184,.2);
 }
 
-/* App */
-#app{width:100%;padding:18px}
+/* App wrapper */
+#app{
+  width:100%;
+  height:100%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  padding:16px;
+}
 
 /* Card */
 .card{
   width:100%;
   max-width:420px;
-  background:linear-gradient(
-    180deg,
-    rgba(15,23,42,.85),
-    rgba(2,6,23,.85)
-  );
-  backdrop-filter:blur(18px);
-  -webkit-backdrop-filter:blur(18px);
-  border-radius:18px;
-  padding:22px;
-  box-shadow:
-    0 20px 40px rgba(0,0,0,.65),
-    inset 0 1px 0 rgba(255,255,255,.04);
-  border:1px solid rgba(148,163,184,.12);
-  margin:auto;
+  background:rgba(15,23,42,.85);
+  backdrop-filter:blur(22px);
+  border-radius:28px;
+  padding:24px;
+  border:1px solid rgba(148,163,184,.18);
+  box-shadow:0 30px 60px rgba(0,0,0,.7);
 }
 
 h2{
   text-align:center;
-  margin:0 0 18px;
-  font-size:20px;
-  font-weight:600;
-  letter-spacing:.3px;
+  margin-bottom:20px;
+  font-size:22px;
 }
 
 /* Inputs */
 input{
   width:100%;
-  padding:14px 14px;
-  margin-bottom:12px;
-  border-radius:12px;
-  border:1px solid rgba(148,163,184,.15);
-  background:rgba(2,6,23,.6);
-  color:#f8fafc;
-  font-size:14px;
-  outline:none;
-  transition:.25s;
+  padding:16px;
+  margin-bottom:14px;
+  border-radius:18px;
+  border:1px solid rgba(148,163,184,.2);
+  background:rgba(2,6,23,.7);
+  color:#fff;
+  font-size:15px;
 }
-input::placeholder{color:#64748b}
+
 input:focus{
+  outline:none;
   border-color:#38bdf8;
-  box-shadow:0 0 0 3px rgba(56,189,248,.18);
+  box-shadow:0 0 0 4px rgba(56,189,248,.25);
 }
 
 /* Buttons */
 button{
   width:100%;
-  padding:12px;
-  border-radius:12px;
+  padding:15px;
+  border-radius:20px;
   border:none;
-  cursor:pointer;
+  font-size:15px;
   font-weight:600;
-  font-size:14px;
-  transition:.25s;
+  cursor:pointer;
 }
 
 .primary{
   background:linear-gradient(135deg,#38bdf8,#0ea5e9);
   color:#020617;
-  box-shadow:0 8px 20px rgba(14,165,233,.35);
 }
-.primary:active{transform:scale(.97)}
 
 .logout{
-  background:linear-gradient(135deg,#ef4444,#dc2626);
+  margin-top:24px;
+  background:linear-gradient(135deg,#ef4444,#b91c1c);
   color:#fff;
-  margin-top:16px;
 }
 
-/* List items */
+/* List */
+#list{
+  margin-top:20px;
+  max-height:45vh;
+  overflow-y:auto;
+}
+
 .item{
-  background:rgba(2,6,23,.6);
-  border:1px solid rgba(148,163,184,.14);
-  padding:14px;
-  border-radius:14px;
-  margin-top:12px;
-  box-shadow:inset 0 1px 0 rgba(255,255,255,.03);
-  font-size:14px;
+  background:rgba(2,6,23,.7);
+  padding:16px;
+  border-radius:20px;
+  border:1px solid rgba(148,163,184,.18);
+  margin-bottom:14px;
 }
 
-/* Badge */
+.item b{
+  font-size:16px;
+}
+
 .badge{
-  font-size:11px;
-  padding:4px 10px;
-  border-radius:999px;
-  margin-left:6px;
   display:inline-block;
+  margin-left:6px;
+  padding:4px 10px;
+  font-size:11px;
+  border-radius:999px;
 }
+
 .active{
-  background:rgba(34,197,94,.18);
   color:#22c55e;
-  border:1px solid rgba(34,197,94,.35);
+  border:1px solid rgba(34,197,94,.4);
 }
+
 .inactive{
-  background:rgba(239,68,68,.18);
   color:#ef4444;
-  border:1px solid rgba(239,68,68,.35);
+  border:1px solid rgba(239,68,68,.4);
 }
 
 /* Actions */
 .actions{
   display:flex;
-  gap:8px;
-  margin-top:10px;
+  gap:10px;
+  margin-top:12px;
 }
+
 .actions button{
-  flex:1;
-  padding:9px;
-  border-radius:10px;
+  padding:10px;
   font-size:13px;
-  background:rgba(148,163,184,.12);
-  color:#e5e7eb;
-}
-.actions button:active{transform:scale(.96)}
-.actions button:last-child{
-  background:linear-gradient(135deg,#ef4444,#dc2626);
+  border-radius:16px;
+  background:#334155;
   color:#fff;
+}
+
+.actions button:last-child{
+  background:#ef4444;
 }
 
 /* Helpers */
 .hide{display:none}
 .msg{
   text-align:center;
+  margin-top:8px;
   color:#fb7185;
   font-size:13px;
-  margin-top:6px;
-}
-* {
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  min-height: 100vh;
-  min-height: 100dvh; /* dynamic viewport for mobile */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-  background: #020617; /* deep base */
-  background-image: 
-    radial-gradient(circle at 100% 0%, rgba(56, 189, 248, 0.15) 0%, transparent 50%),
-    radial-gradient(circle at 0% 100%, rgba(239, 68, 68, 0.12) 0%, transparent 50%),
-    linear-gradient(145deg, #0b1120 0%, #020617 100%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #e2e8f0;
-  padding: 0;
-  margin: 0;
-}
-
-/* desktop block remains similar but more discreet */
-#desktopBlock {
-  display: none;
-  text-align: center;
-  padding: 2rem;
-  max-width: 380px;
-  background: rgba(15, 23, 42, 0.7);
-  backdrop-filter: blur(12px);
-  border-radius: 32px;
-  border: 1px solid rgba(148, 163, 184, 0.15);
-  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
-}
-
-#desktopBlock h2 {
-  color: #f87171;
-  font-weight: 600;
-  letter-spacing: -0.02em;
-  margin-bottom: 0.5rem;
-}
-
-#desktopBlock p {
-  color: #94a3b8;
-  font-size: 0.95rem;
-}
-
-/* main app container fills screen with safe padding */
-#app {
-  width: 100%;
-  min-height: 100vh;
-  min-height: 100dvh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: env(safe-area-inset-top, 16px) env(safe-area-inset-right, 16px) env(safe-area-inset-bottom, 16px) env(safe-area-inset-left, 16px);
-}
-
-/* card — now full-bleed with comfortable edges */
-.card {
-  width: 100%;
-  max-width: 440px; /* keeps readability on larger phones */
-  background: rgba(15, 23, 42, 0.8);
-  backdrop-filter: blur(24px);
-  -webkit-backdrop-filter: blur(24px);
-  border-radius: 36px;
-  padding: 28px 22px;
-  box-shadow: 
-    0 30px 60px -10px rgba(0, 0, 0, 0.8),
-    inset 0 1px 1px rgba(255, 255, 255, 0.06),
-    inset 0 -1px 1px rgba(0, 0, 0, 0.4);
-  border: 1px solid rgba(148, 163, 184, 0.18);
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-  margin: 0 auto;
-}
-
-/* subtle scale feedback on card (optional) */
-.card:active {
-  transform: scale(0.99);
-  box-shadow: 0 20px 40px -10px black;
-}
-
-h2 {
-  text-align: center;
-  margin: 0 0 24px 0;
-  font-size: 1.8rem;
-  font-weight: 600;
-  letter-spacing: -0.02em;
-  background: linear-gradient(135deg, #f0f9ff, #bae6fd);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  line-height: 1.2;
-}
-
-/* inputs refined */
-input {
-  width: 100%;
-  padding: 18px 18px;
-  margin-bottom: 16px;
-  border-radius: 24px;
-  border: 1.5px solid rgba(148, 163, 184, 0.2);
-  background: rgba(2, 6, 23, 0.7);
-  color: #f1f5f9;
-  font-size: 1rem;
-  font-weight: 500;
-  outline: none;
-  transition: all 0.2s ease;
-  -webkit-appearance: none;
-  appearance: none;
-}
-
-input::placeholder {
-  color: #64748b;
-  font-weight: 400;
-  opacity: 0.8;
-}
-
-input:focus {
-  border-color: #38bdf8;
-  background: rgba(2, 6, 23, 0.9);
-  box-shadow: 0 0 0 4px rgba(56, 189, 248, 0.25);
-}
-
-/* buttons */
-button {
-  width: 100%;
-  padding: 16px;
-  border-radius: 30px;
-  border: none;
-  cursor: pointer;
-  font-weight: 600;
-  font-size: 1.1rem;
-  transition: all 0.15s ease;
-  background: rgba(148, 163, 184, 0.1);
-  color: #e2e8f0;
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.05);
-  letter-spacing: 0.3px;
-}
-
-.primary {
-  background: linear-gradient(145deg, #38bdf8, #0ea5e9);
-  color: #020617;
-  font-weight: 700;
-  border: none;
-  box-shadow: 0 12px 28px -8px #0ea5e980;
-  margin-top: 8px;
-}
-
-.primary:active {
-  transform: scale(0.96);
-  box-shadow: 0 6px 16px -4px #0ea5e9;
-}
-
-.logout {
-  background: linear-gradient(145deg, #ef4444, #b91c1c);
-  color: white;
-  font-weight: 700;
-  border: none;
-  box-shadow: 0 12px 28px -8px #ef444480;
-  margin-top: 32px;
-}
-
-.logout:active {
-  transform: scale(0.96);
-  box-shadow: 0 6px 16px -4px #ef4444;
-}
-
-/* list items */
-.item {
-  background: rgba(2, 6, 23, 0.7);
-  border: 1px solid rgba(148, 163, 184, 0.2);
-  padding: 18px 16px;
-  border-radius: 26px;
-  margin-top: 16px;
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  font-size: 0.95rem;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.03), 0 8px 20px -12px black;
-  transition: all 0.15s ease;
-}
-
-.item b {
-  color: white;
-  font-size: 1.1rem;
-  display: inline-block;
-  margin-bottom: 6px;
-}
-
-/* badge */
-.badge {
-  font-size: 0.7rem;
-  padding: 5px 12px;
-  border-radius: 100px;
-  margin-left: 8px;
-  display: inline-block;
-  font-weight: 700;
-  letter-spacing: 0.3px;
-  text-transform: uppercase;
-  border-width: 1.5px;
-  border-style: solid;
-  vertical-align: middle;
-}
-
-.active {
-  background: rgba(34, 197, 94, 0.15);
-  color: #4ade80;
-  border-color: rgba(74, 222, 128, 0.4);
-}
-
-.inactive {
-  background: rgba(239, 68, 68, 0.15);
-  color: #f87171;
-  border-color: rgba(248, 113, 113, 0.4);
-}
-
-/* action buttons inside items */
-.actions {
-  display: flex;
-  gap: 12px;
-  margin-top: 16px;
-}
-
-.actions button {
-  flex: 1;
-  padding: 12px 8px;
-  border-radius: 24px;
-  font-size: 0.9rem;
-  font-weight: 600;
-  background: rgba(148, 163, 184, 0.18);
-  border: 1px solid rgba(255, 255, 255, 0.03);
-  color: #e2e8f0;
-  box-shadow: none;
-  backdrop-filter: blur(5px);
-  transition: 0.1s ease;
-}
-
-.actions button:active {
-  transform: scale(0.95);
-  background: rgba(148, 163, 184, 0.3);
-}
-
-.actions button:last-child {
-  background: linear-gradient(145deg, #ef4444, #b91c1c);
-  color: white;
-  border: none;
-}
-
-.actions button:last-child:active {
-  background: #b91c1c;
-}
-
-/* helpers */
-.hide {
-  display: none !important;
-}
-
-.msg {
-  text-align: center;
-  color: #fbbf24;
-  font-size: 0.9rem;
-  margin-top: 16px;
-  font-weight: 500;
-  text-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
-}
-
-/* dashboard input group refinement */
-#dashboard input {
-  margin-bottom: 16px;
-}
-
-#list {
-  margin-top: 24px;
-  max-height: 50vh;
-  overflow-y: auto;
-  padding-right: 4px;
-  scrollbar-width: thin;
-  scrollbar-color: #475569 #1e293b;
-}
-
-#list::-webkit-scrollbar {
-  width: 5px;
-}
-
-#list::-webkit-scrollbar-track {
-  background: #1e293b;
-  border-radius: 10px;
-}
-
-#list::-webkit-scrollbar-thumb {
-  background: #475569;
-  border-radius: 10px;
-}
-
-/* full-screen adjustments for very small devices */
-@media (max-width: 380px) {
-  .card {
-    padding: 22px 16px;
-    border-radius: 30px;
-  }
-  
-  h2 {
-    font-size: 1.6rem;
-  }
-  
-  input, button {
-    padding: 14px;
-  }
-}
-
-/* landscape mode tweaks */
-@media (orientation: landscape) and (max-height: 500px) {
-  #app {
-    align-items: flex-start;
-    padding-top: 16px;
-  }
-  
-  .card {
-    max-width: 400px;
-  }
-  
-  #list {
-    max-height: 30vh;
-  }
 }
 </style>
-
 </head>
 
 <body>
 
-<!-- Desktop blocked -->
 <div id="desktopBlock">
-  <h2>Desktop Not Supported</h2>
+  <h2>Mobile Only</h2>
   <p>Please open this app on a mobile device.</p>
 </div>
 
-<!-- App -->
 <div id="app">
 
-<div class="card" id="loginBox">
-  <h2>Login</h2>
-  <input id="username" placeholder="Username">
-  <input id="password" type="password" placeholder="Password">
-  <button class="primary" onclick="login()">Login</button>
-  <div class="msg" id="msg"></div>
+  <!-- Login -->
+  <div class="card" id="loginBox">
+    <h2>Login</h2>
+    <input id="username" placeholder="Username">
+    <input id="password" type="password" placeholder="Password">
+    <button class="primary" onclick="login()">Login</button>
+    <div class="msg" id="msg"></div>
+  </div>
+
+  <!-- Dashboard -->
+  <div class="card hide" id="dashboard">
+    <h2 id="title"></h2>
+
+    <input id="walletUserId" placeholder="AR Wallet User ID">
+    <input id="walletUserName" placeholder="User Name">
+    <button class="primary" onclick="addMember()">Add Member</button>
+
+    <div id="list"></div>
+
+    <button class="logout" onclick="logout()">Logout</button>
+  </div>
+
 </div>
-
-<div class="card hide" id="dashboard">
-  <h2 id="title"></h2>
-
-  <input id="walletUserId" placeholder="AR Wallet User ID">
-  <input id="walletUserName" placeholder="User Name">
-  <button class="primary" onclick="addMember()">Add</button>
-
-  <div id="list"></div>
-
-  <button class="logout" onclick="logout()">Logout</button>
-</div>
-
-</div>
-
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
 <script>
-/* 📱 MOBILE ONLY */
-function isMobile(){
-  return (
-    window.innerWidth <= 768 ||
-    'ontouchstart' in window ||
-    navigator.userAgent.match(/Android|iPhone|iPad|iPod|Mobile/i)
-  );
-}
-if(!isMobile()){
+/* Mobile only */
+if(!(/Android|iPhone|iPad|Mobile/i.test(navigator.userAgent))){
   desktopBlock.style.display="block";
-  throw new Error("Desktop blocked");
-}else{
-  app.style.display="block";
+  app.style.display="none";
 }
 
 /* Firebase */
@@ -562,14 +224,6 @@ firebase.initializeApp({
   projectId:"wallet-automation-a59da"
 });
 const db=firebase.firestore();
-
-/* Toast for success only */
-const toast = Swal.mixin({
-  toast:true,
-  position:"bottom-end",
-  showConfirmButton:false,
-  timer:1500
-});
 
 /* Hash */
 async function hashPassword(p){
@@ -582,12 +236,11 @@ const saved=localStorage.getItem("user");
 if(saved) showDashboard(JSON.parse(saved));
 
 async function login(){
-  const u=username.value.trim(),p=password.value;
-  if(!u||!p) return;
-  const h=await hashPassword(p);
+  if(!username.value||!password.value) return;
+  const h=await hashPassword(password.value);
 
   db.collection("users")
-    .where("username","==",u)
+    .where("username","==",username.value.trim())
     .where("passwordHash","==",h)
     .where("active","==",true)
     .get()
@@ -606,7 +259,7 @@ function showDashboard(user){
   loadMembers(user);
 }
 
-/* Load members */
+/* Load members (createdBy NOT shown) */
 function loadMembers(user){
   let q=db.collection("members").orderBy("createdAt","desc");
   if(user.role!=="admin"){
@@ -615,7 +268,6 @@ function loadMembers(user){
   q.onSnapshot(renderMembers);
 }
 
-/* Render */
 function renderMembers(snap){
   const user=JSON.parse(localStorage.getItem("user"));
   list.innerHTML="";
@@ -631,19 +283,15 @@ function renderMembers(snap){
 
         ${user.role==="admin"?`
         <div class="actions">
-          <button onclick="confirmToggle('${d.id}',${m.active})">
+          <button onclick="toggle('${d.id}',${m.active})">
             ${m.active?'Deactivate':'Activate'}
           </button>
-          <button style="background:#ef4444;color:#fff"
-            onclick="confirmDelete('${d.id}','${m.walletUserName}')">
-            Delete
-          </button>
+          <button onclick="del('${d.id}','${m.walletUserName}')">Delete</button>
         </div>`:""}
       </div>`;
   });
 }
 
-/* Add */
 function addMember(){
   const user=JSON.parse(localStorage.getItem("user"));
   if(!walletUserId.value||!walletUserName.value) return;
@@ -655,52 +303,20 @@ function addMember(){
     createdByRole:user.role,
     active:true,
     createdAt:Date.now()
-  }).then(()=>{
-    toast.fire({icon:"success",title:"Member added"});
-    walletUserId.value="";
-    walletUserName.value="";
   });
+
+  walletUserId.value="";
+  walletUserName.value="";
 }
 
-/* 🔴 FULL-SCREEN CONFIRM TOGGLE */
-function confirmToggle(id,isActive){
-  Swal.fire({
-    title: isActive ? "Deactivate Member?" : "Activate Member?",
-    text: "Are you sure you want to continue?",
-    icon: "warning",
-    showCancelButton: true,
-    confirmButtonColor: "#ef4444",
-    cancelButtonColor: "#64748b",
-    confirmButtonText: "Yes",
-    cancelButtonText: "Cancel"
-  }).then(r=>{
-    if(r.isConfirmed){
-      db.collection("members").doc(id).update({active:!isActive})
-        .then(()=>toast.fire({
-          icon:"success",
-          title:isActive?"Deactivated":"Activated"
-        }));
-    }
-  });
+function toggle(id,a){
+  db.collection("members").doc(id).update({active:!a});
 }
 
-/* 🔴 FULL-SCREEN CONFIRM DELETE */
-function confirmDelete(id,name){
-  Swal.fire({
-    title: "Delete Member?",
-    text: `This will permanently delete ${name}`,
-    icon: "error",
-    showCancelButton: true,
-    confirmButtonColor: "#ef4444",
-    cancelButtonColor: "#64748b",
-    confirmButtonText: "Delete",
-    cancelButtonText: "Cancel"
-  }).then(r=>{
-    if(r.isConfirmed){
-      db.collection("members").doc(id).delete()
-        .then(()=>toast.fire({icon:"success",title:"Deleted"}));
-    }
-  });
+function del(id,n){
+  if(confirm("Delete "+n+" ?")){
+    db.collection("members").doc(id).delete();
+  }
 }
 
 function logout(){
