--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@ body{
   color:#e5e7eb;
 }
 
-/* Desktop block */
 #desktopBlock{
   display:none;
   max-width:380px;
@@ -43,7 +42,6 @@ body{
   border:1px solid rgba(148,163,184,.2);
 }
 
-/* App wrapper */
 #app{
   width:100%;
   height:100%;
@@ -53,7 +51,6 @@ body{
   padding:16px;
 }
 
-/* Card */
 .card{
   width:100%;
   max-width:420px;
@@ -71,7 +68,6 @@ h2{
   font-size:22px;
 }
 
-/* Inputs */
 input{
   width:100%;
   padding:16px;
@@ -89,7 +85,6 @@ input:focus{
   box-shadow:0 0 0 4px rgba(56,189,248,.25);
 }
 
-/* Buttons */
 button{
   width:100%;
   padding:15px;
@@ -111,7 +106,6 @@ button{
   color:#fff;
 }
 
-/* List */
 #list{
   margin-top:20px;
   max-height:45vh;
@@ -148,7 +142,6 @@ button{
   border:1px solid rgba(239,68,68,.4);
 }
 
-/* Actions */
 .actions{
   display:flex;
   gap:10px;
@@ -167,7 +160,6 @@ button{
   background:#ef4444;
 }
 
-/* Helpers */
 .hide{display:none}
 .msg{
   text-align:center;
@@ -187,7 +179,6 @@ button{
 
 <div id="app">
 
-  <!-- Login -->
   <div class="card" id="loginBox">
     <h2>Login</h2>
     <input id="username" placeholder="Username">
@@ -196,7 +187,6 @@ button{
     <div class="msg" id="msg"></div>
   </div>
 
-  <!-- Dashboard -->
   <div class="card hide" id="dashboard">
     <h2 id="title"></h2>
 
@@ -212,26 +202,22 @@ button{
 </div>
 
 <script>
-/* Mobile only */
 if(!(/Android|iPhone|iPad|Mobile/i.test(navigator.userAgent))){
   desktopBlock.style.display="block";
   app.style.display="none";
 }
 
-/* Firebase */
 firebase.initializeApp({
   apiKey:"AIzaSyCI7WjTsCfYrFU0U38y84PvSE1ysoOmc68",
   projectId:"wallet-automation-a59da"
 });
 const db=firebase.firestore();
 
-/* Hash */
 async function hashPassword(p){
   const b=await crypto.subtle.digest("SHA-256",new TextEncoder().encode(p));
   return [...new Uint8Array(b)].map(x=>x.toString(16).padStart(2,"0")).join("");
 }
 
-/* Auto login */
 const saved=localStorage.getItem("userProfile");
 if(saved) showDashboard(JSON.parse(saved));
 
@@ -259,7 +245,6 @@ function showDashboard(user){
   loadMembers(user);
 }
 
-/* Load members (createdBy NOT shown) */
 function loadMembers(user){
   let q=db.collection("members").orderBy("createdAt","desc");
   q.onSnapshot(renderMembers);
@@ -283,16 +268,20 @@ function renderMembers(snap) {
   snap.forEach(doc => {
     const m = doc.data();
 
-    // 🔐 User rules
     if (user.role !== "admin") {
       if (m.createdBy !== user.username) return;
       if (!m.active) return;
     }
 
+    const balanceHtml = m.balance !== undefined
+      ? `<br><span style="color:#38bdf8;font-weight:600">Balance: ₹${m.balance}</span>`
+      : "";
+
     list.innerHTML += `
       <div class="item">
         <b>${m.walletUserName}</b><br>
-        ID: ${m.walletUserId}<br>
+        ID: ${m.walletUserId}
+        ${balanceHtml}<br>
 
         <small style="color:#94a3b8">
           Created by:
@@ -303,7 +292,6 @@ function renderMembers(snap) {
           ${m.active ? 'ACTIVE' : 'INACTIVE'}
         </span>
 
-        
         <div class="actions">
           <button onclick="toggle('${doc.id}', ${m.active})">
             ${m.active ? 'Deactivate' : 'Activate'}
@@ -316,8 +304,6 @@ function renderMembers(snap) {
     `;
   });
 }
-
-  
 
 function addMember(){
   const user=JSON.parse(localStorage.getItem("userProfile"));
